# HTTPServer

./: .gitignore  Doxyfile  Readme.txt
client/: CMakeLists.txt  HTTPGetRequest.cpp  HTTPGetRequest.hpp  cert.pem  kill_http-server_process.sh  main.cpp  received.txt
html/: HTTPGetRequest_8hpp.html  HTTPGetRequest_8hpp_source.html  annotated.html  classHTTPGetRequest-members.html  classHTTPGetRequest.html  classes.html  classhttp_1_1server_1_1connection-members.html  classhttp_1_1server_1_1connection.html  classhttp_1_1server_1_1connection__manager-members.html  classhttp_1_1server_1_1connection__manager.html  classhttp_1_1server_1_1request__handler-members.html  classhttp_1_1server_1_1request__handler.html  classhttp_1_1server_1_1request__parser-members.html  classhttp_1_1server_1_1request__parser.html  classhttp_1_1server_1_1server-members.html  classhttp_1_1server_1_1server.html  client_2main_8cpp.html  connection_8hpp.html  connection_8hpp_source.html  connection__manager_8hpp.html  connection__manager_8hpp_source.html  dir_142c4163be019363c1dd76eeef34aa59.html  dir_336aa4c8071e8a204dffa3d18338e372.html  dir_41e1742e44e2de38b3bc91f993fed282.html  dir_496db62c682c5f8ca6dbb22ca5f53800.html  dir_50cfa847f00ee0092eab7810e1bb8af5.html  dir_8de3fad4256f9d16dc88e1f63bb4cf5d.html  dir_8f6335c398aea5ec5fdd01ef6b14ffd8.html  dir_db3a54907829b36871118d03417739cd.html  dir_eac5f8f63c28b01d73258064cc574fdd.html  dir_f32fc4379b8fa1ba508b4a1252f9dde3.html  dir_fdbb2ed362f8a956e864a6aa61d87ad5.html  files.html  (+36 more)
server/: .clang-format  CMakeLists.txt  connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  data.txt  header.hpp  key.pem  main.cpp  mime_types.cpp  mime_types.hpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  server.cpp  server.hpp
(+63 files in other folders)
